Fix horizontal scrolling for long code lines with leading whitespace.
Fixes #934.

┌────────────────────────┐
│                        │
│  ___ ___ ___   ___ ___ │
│ / __/ __/ __| |_ _/ __|│
│| (__\__ \__ \  | |\__ \│
│ \___|___/___/ |___|___/│
│                        │
│   ___      _____ ___  ___  __  __ ___
│  /_\ \    / / __/ __|/ _ \|  \/  | __|
│ / _ \ \/\/ /| _|\__ \ (_) | |\/| | _|
│/_/ \_\_/\_/ |___|___/\___/|_|  |_|___|
│                        │
│                        │
└────────────────────────┘

--- a/App/Theming/base.less
+++ b/App/Theming/base.less
@@ -30,6 +30,9 @@ body {
   img, iframe, embed {
     max-width: 100%;
   }
+  div.code pre {
+    white-space: break-spaces;
+  }
 }
 
 // The action sheet code highlights the <header>, <footer>, and .action-button elements. Padding on those elements is included in the highlight but margin is not. So prefer pading the <header> and <footer> over setting a margin on the <post>.
