--- a/App/Theming/posts-view-alternate-dark.css
+++ b/App/Theming/posts-view-alternate-dark.css
@@ -20,6 +20,9 @@ body {
 .postbody embed {
   max-width: 100%;
 }
+.postbody div.code pre {
+  white-space: break-spaces;
+}
 post {
   display: block;
   border-top: 1px solid;
